# topdesk-api-python

./:  .pypirc  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  python-package.yml
src/topdesk/: __init__.py  _asset.py  _change.py  _incident.py  _operator.py  _person.py  _utils.py  base.py
