[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topdesk-api-python"
version = "0.2.2"
dependencies = [
    "requests"
]
authors = [
  { name="Digizone ICT", email="support@digizone.nl" },
]
description = "Python library for TOPdesk API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DigizoneICT/topdesk-api-python"
Repository = "https://github.com/DigizoneICT/topdesk-api-python.git"
Issues = "https://github.com/DigizoneICT/topdesk-api-python/issues"